--- a/src/pages/test-station/test-station-details/test-station-details.html
+++ b/src/pages/test-station/test-station-details/test-station-details.html
@@ -4,7 +4,9 @@
         ATF details
         </ion-title>
         <ion-buttons end>
-            <button ion-button (click)="startVisit()">
+            <button ion-button 
+                    [ngClass]="{buttonOpacity: changeOpacity}"
+                    (click)="startVisit()">
                 Start visit
             </button>
         </ion-buttons>
