--- a/src/pages/visit/visit-timeline/visit-timeline.html
+++ b/src/pages/visit/visit-timeline/visit-timeline.html
@@ -52,7 +52,10 @@
 <ion-footer>
   <ion-toolbar class="gray-toolbar">
     <ion-buttons class="button-centered">
-      <button ion-button (click)="endVisit()" color="primary">
+      <button ion-button 
+              (click)="endVisit()" 
+              color="primary"
+              [ngClass]="{buttonOpacity: changeOpacity}">
         End visit
       </button>
     </ion-buttons>
