--- a/src/pages/testing/test-creation/complete-test/complete-test.html
+++ b/src/pages/testing/test-creation/complete-test/complete-test.html
@@ -136,7 +136,11 @@
         </ion-item-group>
         <ion-item-group>
             <ion-item-divider></ion-item-divider>
-            <button ion-item detail-none class="btn-remove-test" (click)="onRemoveTestType(vehicle, vehicleTest)">
+            <button ion-item 
+                    detail-none 
+                    class="btn-remove-test" 
+                    [ngClass]="{buttonBackground: changeBackground}"
+                    (click)="onRemoveTestType(vehicle, vehicleTest)">
                 Remove test type
             </button>
             <button ion-item detail-none class="btn-remove-test" (click)="abandonTestType(vehicleTest)">
