--- a/src/pages/testing/test-creation/test-create/test-create.html
+++ b/src/pages/testing/test-creation/test-create/test-create.html
@@ -5,6 +5,7 @@
         </ion-title>
         <ion-buttons end>
             <button ion-button
+                    [ngClass]="{buttonOpacity: changeOpacity}"
                     (click)="reviewTest()">
                 Review
             </button>
