--- a/src/pages/testing/test-creation/test-review/test-review.html
+++ b/src/pages/testing/test-creation/test-review/test-review.html
@@ -81,76 +81,79 @@
             <div margin-bottom class="defect-details"
                  [ngClass]="{'border': i !== testType.defects.length - 1}"
                  *ngFor="let defect of testType.defects; let i = index">
-              <h3 class="defect-name">
+              <h3 class="defect-name" padding-right>
                 <span>
                     <span>{{ defect.imNumber }}.{{ defect.itemNumber }}</span>
                     <span *ngIf="defect.deficiencyId">({{ defect.deficiencyId }})</span>
                     <span *ngIf="defect.deficiencySubId">({{ defect.deficiencySubId }})</span>
                 </span>
-                                <ion-badge text-uppercase no-margin
-                                           [color]="defectsService.getBadgeColor(defect.deficiencyCategory)">
-                                    {{ defect.deficiencyCategory }}
-                                </ion-badge>
-                                <ion-badge text-uppercase no-margin color="tertiary"
-                                           *ngIf="defect.prs">
-                                    PRS
-                                </ion-badge>
-                            </h3>
-                            <h4 text-wrap class="parent-info-color">
-                                {{ defect.imNumber }}. {{ defect.imDescription}}
-                            </h4>
-                            <h4 text-wrap class="parent-info-color">
-                                {{ defect.itemNumber }}. {{ defect.itemDescription }}
-                            </h4>
-                            <h4 text-wrap class="parent-info-color"
-                                *ngIf="defect.deficiencyCategory != commonFunctions.capitalizeString(deficiencyCategory.ADVISORY)">
-                                <span *ngIf="defect.deficiencyId">({{ defect.deficiencyId }})</span>
-                                <span *ngIf="defect.deficiencySubId">({{ defect.deficiencySubId }})</span>
-                                {{ defect.deficiencyText }}
-                            </h4>
-                            <h4 text-wrap class="parent-info-color"
-                                *ngIf="defect.additionalInformation.notes">{{defect.additionalInformation.notes}}</h4>
-                        </div>
-                    </div>
-                    <h3 margin-bottom class="parent-info-color"
-                        *ngIf="!testType.defects.length">None
-                    </h3>
-                </ion-item>
-                <ion-item padding-left margin-bottom
-                          class="bottom-divider"
-                          *ngIf="testType.testResult !== testTypeResults.ABANDONED && getTestTypeOptionalFieldsToDisplay(testType, 'notes')">
-                    <div margin-top class="notes-section-title">
-                        Notes
-                    </div>
-                    <h3 text-wrap
-                        *ngIf="testType.additionalNotesRecorded">{{testType.additionalNotesRecorded}}</h3>
-                    <h3 class="parent-info-color" *ngIf="!testType.additionalNotesRecorded">None</h3>
-                </ion-item>
-                <ion-item padding-left margin-bottom
-                          class="bottom-divider"
-                          *ngIf="testType.testResult === testTypeResults.ABANDONED">
-                    <div margin-top class="notes-section-title">
-                        Reason(s) for abandoning
-                    </div>
-                    <h4 text-wrap class="parent-info-color"
-                        *ngFor="let reason of testType.reasons">{{reason}}</h4>
-                </ion-item>
-                <ion-item padding-left margin-bottom
-                          class="bottom-divider"
-                          *ngIf="testType.testResult === testTypeResults.ABANDONED && testType.additionalCommentsForAbandon">
-                    <div margin-top class="notes-section-title">
-                        Notes
-                    </div>
-                    <h4 text-wrap class="parent-info-color">{{testType.additionalCommentsForAbandon}}</h4>
-                </ion-item>
-                <button ion-item
-                        class="bottom-divider change-details-button"
-                        *ngIf="testType.testResult !== testTypeResults.ABANDONED"
-                        (click)="openTestDetailsPage(vehicle, testType)"><h3>Change details</h3>
-                </button>
-            </ion-card>
-            <div margin-vertical class="section-divider"></div>
-        </div>
+                <ion-badge text-uppercase no-margin
+                            [color]="defectsService.getBadgeColor(defect.deficiencyCategory)">
+                    {{ defect.deficiencyCategory }}
+                </ion-badge>
+                <ion-badge text-uppercase no-margin color="tertiary"
+                            *ngIf="defect.prs">
+                    PRS
+                </ion-badge>
+              </h3>
+              <h4 padding-right text-wrap class="parent-info-color">
+                  {{ defect.imNumber }}. {{ defect.imDescription}}
+              </h4>
+              <h4 padding-right text-wrap class="parent-info-color">
+                  {{ defect.itemNumber }}. {{ defect.itemDescription }}
+              </h4>
+              <h4 padding-right text-wrap class="parent-info-color"
+                  *ngIf="defect.deficiencyCategory != commonFunctions.capitalizeString(deficiencyCategory.ADVISORY)">
+                  <span *ngIf="defect.deficiencyId">({{ defect.deficiencyId }})</span>
+                  <span *ngIf="defect.deficiencySubId">({{ defect.deficiencySubId }})</span>
+                  {{ defect.deficiencyText }}
+              </h4>
+              <h4 padding-right text-wrap class="parent-info-color"
+                  *ngIf="defect.additionalInformation.notes">{{defect.additionalInformation.notes}}
+              </h4>
+            </div>
+          </div>
+          <h3 margin-bottom class="parent-info-color"
+              *ngIf="!testType.defects.length">None
+          </h3>
+        </ion-item>
+        <ion-item padding-left margin-bottom
+                  class="bottom-divider"
+                  *ngIf="testType.testResult !== testTypeResults.ABANDONED && getTestTypeOptionalFieldsToDisplay(testType, 'notes')">
+          <div margin-top class="notes-section-title">
+            Notes
+          </div>
+          <h3 text-wrap
+              padding-right
+              class="parent-info-color"
+              *ngIf="testType.additionalNotesRecorded">{{testType.additionalNotesRecorded}}</h3>
+          <h3 class="parent-info-color" *ngIf="!testType.additionalNotesRecorded">None</h3>
+        </ion-item>
+        <ion-item padding-left margin-bottom
+                  class="bottom-divider"
+                  *ngIf="testType.testResult === testTypeResults.ABANDONED">
+          <div margin-top class="notes-section-title">
+            Reason(s) for abandoning
+          </div>
+          <h4 text-wrap class="parent-info-color"
+              *ngFor="let reason of testType.reasons">{{reason}}</h4>
+        </ion-item>
+        <ion-item padding-left margin-bottom
+                  class="bottom-divider"
+                  *ngIf="testType.testResult === testTypeResults.ABANDONED && testType.additionalCommentsForAbandon">
+          <div margin-top class="notes-section-title">
+              Notes
+          </div>
+          <h4 text-wrap class="parent-info-color">{{testType.additionalCommentsForAbandon}}</h4>
+        </ion-item>
+        <button ion-item
+                class="bottom-divider change-details-button"
+                *ngIf="testType.testResult !== testTypeResults.ABANDONED"
+                (click)="openTestDetailsPage(vehicle, testType)"><h3>Change details</h3>
+        </button>
+      </ion-card>
+      <div margin-vertical class="section-divider"></div>
+    </div>
 
     <div margin-top class="footer-cta-section">
       <button ion-button block color="secondary" (click)="submitTest(latestTest)">Submit</button>
