--- a/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
+++ b/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
@@ -25,7 +25,7 @@
     <div text-uppercase
          text-center
          class="vehicle-header-vrm-number">
-        {{ vehicleData.vrm }}
+        {{ vehicleData.vrm | formatVrm }}
     </div>
 
     <ion-list class="vehicle-list">
