--- a/src/pages/visit/visit-timeline/visit-timeline.html
+++ b/src/pages/visit/visit-timeline/visit-timeline.html
@@ -13,7 +13,7 @@
 
 <ion-content no-padding>
   <ion-list class="full-dividers-list">
-    <ion-item-divider><span class="divider-color">{{ visit.startTime | date: 'd MMMM yyyy' }}</span></ion-item-divider>
+    <ion-item-divider><span text-uppercase class="divider-color">{{ visit.startTime | date: 'd MMMM yyyy' }}</span></ion-item-divider>
     <button ion-item detail-none class="timeline-checkin">
       <div class="timeline-bar"></div>
       <img src="assets/timeline-pin-with-line.svg" item-start>
