--- a/src/pages/testing/test-creation/test-review/test-review.html
+++ b/src/pages/testing/test-creation/test-review/test-review.html
@@ -12,7 +12,7 @@
       <ion-item padding-vertical class="ion-item-title">
         <ion-img item-start class="vehicle-type-icon"
                  src="./assets/imgs/{{getVehicleTypeIconToShow(vehicle)}}-icon.svg" width="65" height="27"></ion-img>
-        <h2 padding-left>{{ vehicle.vrm }} ({{vehicle.techRecord.vehicleType}})</h2>
+        <h2 text-uppercase padding-left>{{ vehicle.vrm }} ({{vehicle.techRecord.vehicleType}})</h2>
         <p padding-left>{{ vehicle.vin }}</p>
       </ion-item>
       <ion-item padding-horizontal
@@ -88,32 +88,55 @@
                     <span *ngIf="defect.deficiencySubId">({{ defect.deficiencySubId }})</span>
                 </span>
                 <ion-badge text-uppercase no-margin
-                            [color]="defectsService.getBadgeColor(defect.deficiencyCategory)">
-                    {{ defect.deficiencyCategory }}
+                           [color]="defectsService.getBadgeColor(defect.deficiencyCategory)">
+                  {{ defect.deficiencyCategory }}
                 </ion-badge>
                 <ion-badge text-uppercase no-margin color="tertiary"
-                            *ngIf="defect.prs">
-                    PRS
+                           *ngIf="defect.prs">
+                  PRS
                 </ion-badge>
               </h3>
-              <h4 padding-right text-wrap class="parent-info-color">
-                  {{ defect.imNumber }}. {{ defect.imDescription}}
+              <h4 padding-right text-wrap class="parent-info-color-sm">
+                {{ defect.imNumber }}. {{ defect.imDescription}}
               </h4>
-              <h4 padding-right text-wrap class="parent-info-color">
-                  {{ defect.itemNumber }}. {{ defect.itemDescription }}
+              <h4 padding-right text-wrap class="parent-info-color-sm">
+                {{ defect.itemNumber }}. {{ defect.itemDescription }}
               </h4>
-              <h4 padding-right text-wrap class="parent-info-color"
+              <h4 padding-right text-wrap class="parent-info-color-sm"
                   *ngIf="defect.deficiencyCategory != commonFunctions.capitalizeString(deficiencyCategory.ADVISORY)">
-                  <span *ngIf="defect.deficiencyId">({{ defect.deficiencyId }})</span>
-                  <span *ngIf="defect.deficiencySubId">({{ defect.deficiencySubId }})</span>
-                  {{ defect.deficiencyText }}
+                <span *ngIf="defect.deficiencyId">({{ defect.deficiencyId }})</span>
+                <span *ngIf="defect.deficiencySubId">({{ defect.deficiencySubId }})</span>
+                {{ defect.deficiencyText }}
               </h4>
-              <h4 padding-right text-wrap class="parent-info-color"
-                  *ngIf="defect.additionalInformation.notes">{{defect.additionalInformation.notes}}
+              <h4 padding-right class="additional-info parent-info-color-sm"> 
+                <span *ngIf="defect.additionalInformation.location.vertical">
+                  {{ defect.additionalInformation.location.vertical }}<span class="comma">,</span>
+                </span>
+                <span *ngIf="defect.additionalInformation.location.horizontal">
+                  {{ defect.additionalInformation.location.horizontal }}<span class="comma">,</span>
+                </span>
+                <span *ngIf="defect.additionalInformation.location.longitudinal">
+                  {{ defect.additionalInformation.location.longitudinal }}<span class="comma">,</span>
+                </span>
+                <span *ngIf="defect.additionalInformation.location.lateral">
+                  {{ defect.additionalInformation.location.lateral }}<span class="comma">,</span>
+                </span>
+                <span *ngIf="defect.additionalInformation.location.axleNumber">
+                  axle {{ defect.additionalInformation.location.axleNumber }}<span class="comma">,</span>
+                </span>
+                <span *ngIf="defect.additionalInformation.location.rowNumber">
+                  row {{ defect.additionalInformation.location.rowNumber }}<span class="comma">,</span>
+                </span>
+                <span *ngIf="defect.additionalInformation.location.seatNumber">
+                  seat {{ defect.additionalInformation.location.seatNumber }}<span class="comma">,</span>
+                </span>
+              </h4>
+              <h4 padding-right text-wrap class="parent-info-color-sm"
+                  *ngIf="defect.additionalInformation.notes">{{ defect.additionalInformation.notes }}
               </h4>
             </div>
           </div>
-          <h3 margin-bottom class="parent-info-color"
+          <h3 margin-bottom class="parent-info-color-sm"
               *ngIf="!testType.defects.length">None
           </h3>
         </ion-item>
@@ -136,20 +159,22 @@
             Reason(s) for abandoning
           </div>
           <h4 text-wrap class="parent-info-color"
-              *ngFor="let reason of testType.reasons">{{reason}}</h4>
+              *ngFor="let reason of testType.reasons">{{reason}}
+          </h4>
         </ion-item>
         <ion-item padding-left margin-bottom
                   class="bottom-divider"
                   *ngIf="testType.testResult === testTypeResults.ABANDONED && testType.additionalCommentsForAbandon">
           <div margin-top class="notes-section-title">
-              Notes
+            Notes
           </div>
           <h4 text-wrap class="parent-info-color">{{testType.additionalCommentsForAbandon}}</h4>
         </ion-item>
         <button ion-item
                 class="bottom-divider change-details-button"
                 *ngIf="testType.testResult !== testTypeResults.ABANDONED"
-                (click)="openTestDetailsPage(vehicle, testType)"><h3>Change details</h3>
+                (click)="openTestDetailsPage(vehicle, testType)">
+          <h3>Change details</h3>
         </button>
       </ion-card>
       <div margin-vertical class="section-divider"></div>
