--- a/src/pages/visit/visit-timeline/visit-timeline.html
+++ b/src/pages/visit/visit-timeline/visit-timeline.html
@@ -27,7 +27,7 @@
       <div class="timeline-bar"></div>
       <img src="assets/timeline-oval.svg" item-start>
       <div class="timeline-item-content">
-        <p>{{ timelineItem.startTime | date: 'shortTime' }} - {{ timelineItem.endTime | date: 'shortTime' }}</p>
+        <p>{{ timelineItem.startTime | date: 'HH:mm' }} - {{ timelineItem.endTime | date: 'HH:mm' }}</p>
         <div *ngFor="let vehicle of timelineItem.vehicles">
           <h2>Test ({{ vehicle.vrm | formatVrm }})</h2>
           <span *ngFor="let vehicle of timelineItem.vehicles">
