--- a/src/pages/testing/test-creation/test-review/test-review.html
+++ b/src/pages/testing/test-creation/test-review/test-review.html
@@ -136,7 +136,7 @@
               </h4>
             </div>
           </div>
-          <h3 margin-bottom class="parent-info-color-sm"
+          <h3 margin-bottom class="parent-info-color"
               *ngIf="!testType.defects.length">None
           </h3>
         </ion-item>
