--- a/src/pages/testing/defects/defect-details/defect-details.html
+++ b/src/pages/testing/defects/defect-details/defect-details.html
@@ -115,7 +115,7 @@
     </ion-item-group>
 </div>
 
-    <ion-item-group>
+    <ion-item-group *ngIf="showPrs">
       <ion-item-divider text-uppercase>
         <span padding-left>PRS</span>
       </ion-item-divider>
