--- a/src/pages/test-station/test-station-details/test-station-details.html
+++ b/src/pages/test-station/test-station-details/test-station-details.html
@@ -4,9 +4,10 @@
         ATF details
         </ion-title>
         <ion-buttons end>
-            <button ion-button 
+            <button ion-button
                     [ngClass]="{buttonOpacity: changeOpacity}"
-                    (click)="startVisit()">
+                    (click)="startVisit()"
+                    [disabled]="isNextPageLoading">
                 Start visit
             </button>
         </ion-buttons>
